--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
   <div class="container">
     <iframe
       allowfullscreen
-      src="https://www.figma.com/make/gcSKCbM2fqAJF4KmbTAiBs/Storyboard-Prototype?node-id=0-4&t=PvRDJXzN8byUUX0s-0">
+      src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/make/gcSKCbM2fqAJF4KmbTAiBs/Storyboard-Prototype?node-id=0-4&t=PvRDJXzN8byUUX0s-0">
     </iframe>
   </div>
 </body>
